# proc-macro-workshop

./: .gitignore  .travis.yml
.github/workflows/: rust.yml
builder/: Cargo.toml
builder/src/: lib.rs
debug/: Cargo.toml
debug/src/: lib.rs
