[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
quote = "0.6.13"
syn = { version = "0.15.43", features = ["extra-traits"] }
proc-macro2 = "0.4.30"
