[package]
name = "derive_builder"
version = "0.0.0"
edition = "2018"
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0"

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.3", features = ["extra-traits"] }
proc-macro2 = "1.0.1"
